fix: overflow-x on landing page

--- a/src/views/Landing/landing.scss
+++ b/src/views/Landing/landing.scss
@@ -1,8 +1,9 @@
-.landing-root{
+.landing-root {
     height: 100vh;
     width: 100%;
-    overflow: scroll;
-    background: rgb(0,0,0);
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
 }
